--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <body>
     <div id="app"></div>
     <div id="mst-button"></div>
+
+    <button class="dart-btn dart-btn-primary-mini kenost-vue-button" data-kenost-id-product="4992" data-kenost-store="48" data-kenost-org="1">В корзину</button>
+    <button class="dart-btn dart-btn-secondary-outline kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
+    <button class="dart-btn dart-btn-secondary kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
+    <button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
+
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
