--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>MST BASKET</title>
   </head>
   <body>
-    <div id="app"></div>
-    <div id="mst-button"></div>
+    <div id="mst-kenost-basket"></div>
 
     <button class="dart-btn dart-btn-primary-mini kenost-vue-button" data-kenost-id-product="4992" data-kenost-store="48" data-kenost-org="1">В корзину</button>
     <button class="dart-btn dart-btn-secondary-outline kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
