Фикс багов + Добавлена корзина модальным окном

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <button class="dart-btn dart-btn-secondary kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
     <button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
 
+    <div id="mst-kenost-basket-modals"></div>
+
+    <button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-basket-modal-change">В корзину</button>
+
 
     <script type="module" src="/src/main.js"></script>
   </body>
