--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-basket-modal-change">В корзину</button>
 
+    <div class="kenost-basket-total-count"></div>
+    <div class="kenost-basket-total-cost"></div>
 
     <script type="module" src="/src/main.js"></script>
   </body>
