--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <body>
     <div id="mst-kenost-basket"></div>
 
-    <button class="dart-btn dart-btn-primary-mini kenost-vue-button" data-kenost-id-product="4992" data-kenost-store="48" data-kenost-org="1">В корзину</button>
-    <button class="dart-btn dart-btn-secondary-outline kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
+    <button class="dart-btn dart-btn-primary-mini kenost-vue-button" data-kenost-id-product="513" data-kenost-store="53" data-kenost-org="1">В корзину</button>
+    <!--<button class="dart-btn dart-btn-secondary-outline kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
     <button class="dart-btn dart-btn-secondary kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
     <button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
-
+    -->
     <div id="mst-kenost-basket-modals"></div>
 
-    <button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-basket-modal-change">В корзину</button>
+    <!--<button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-basket-modal-change">В корзину</button> -->
 
     <div class="kenost-basket-total-count"></div>
     <div class="kenost-basket-total-cost"></div>
