--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button class="dart-btn dart-btn-secondary kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
     <button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
     -->
+    <button class="dart-btn dart-btn-primary-mini kenost-vue-basket-modal-change">Модальная корзина</button>
     <div id="mst-kenost-basket-modals"></div>
 
     <!--<button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-basket-modal-change">В корзину</button> -->
