--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MST BASKET</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="mst-kenost-basket"></div>
 
     <button class="dart-btn dart-btn-primary-mini kenost-vue-button" data-kenost-id-product="616" data-kenost-store="1" data-kenost-org="415">В корзину</button>
@@ -14,6 +16,7 @@
     <button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-button" data-kenost-id-product="4601" data-kenost-store="48" data-kenost-org="1">В корзину</button>
     -->
     <button class="dart-btn dart-btn-primary-mini kenost-vue-basket-modal-change">Модальная корзина</button>
+    <button class="dart-btn dart-btn-primary-mini kenost-vue-button" data-kenost-id-product="745" data-kenost-store="53" data-kenost-org="1">В корзину (акция/кратность)</button>
     <div id="mst-kenost-basket-modals"></div>
 
     <!--<button class="dart-btn dart-btn-secondary-outline-mini kenost-vue-basket-modal-change">В корзину</button> -->
@@ -22,5 +25,6 @@
     <div class="kenost-basket-total-cost"></div>
 
     <script type="module" src="/src/main.js"></script>
-  </body>
+</body>
+
 </html>
